# GCodeOptimizer

./: CMakeLists.txt  README.md  main.cpp  result.nc  test.nc
app/: CMakeLists.txt  main.cpp
gcode/: CMakeLists.txt  Command.cpp  Command.h  Command.test.cpp  File.cpp  File.h  File.test.cpp  GCodeFile.cpp  GCodeFile.h  Optimize.cpp  Optimize.h  Optimize.test.cpp  Part.cpp  Part.h  Part.test.cpp  Position.cpp  Position.h  Position.test.cpp  Vector.cpp  Vector.h  Vector.test.cpp
scripts/: thirdparty.cmake
src/: CMakeLists.txt  Command.cpp  Command.h  Optimize.cpp  Part.cpp  Part.h  Position.cpp  Position.h  main.cpp
testdata/: KreisGross.nc  KreisGross_anbindungen.nc  KreisKlein.nc  Rechteck.nc  RechteckAnbindungen.nc  RechteckTasche.nc  Schraube.nc  SchraubenFräsbett.nc  expected_KreisGross.nc  expected_KreisGrossAnbindungen.nc  expected_KreisKlein.nc  expected_Rechteck.nc  expected_RechteckAnbindungen.nc  expected_Schraube.nc  expected_Schrauben.nc
